uni.css
html, body, .content { height: 100%; width: 100%; margin: 0; }

body {
  background-color: #040b10;
}

#headerImg {
  height: 400px;
  width: auto;
}
.navbar {
  height: 65px;
  width: 100%;
  position: absolute;
  top:0px;
  left: 0px;
  padding-top: 15px;
  padding-left: 30px;
  background-color: #040b10;
}

.navbarText {
  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-weight: bold;
  font-size: 40px;
  text-align: left;
  margin-top: -37px;
  padding-left: 65px;
  color: #9ba8b1;
}

.navbarLinkPrime {
  padding-left: 50px;
  text-decoration: none;
}

.navbarLink {
  color: #9ba8b1;
  padding-left: 20px;
  text-decoration: none;

}

.navbarLink:hover, .navbarLinkPrime:hover, #homeLink:hover {
  color:#9cc7e4;
}

#navImg {
  height: 50px;
  width: auto;
  position: absolute;
}

.scrollingBackdrop {
  height: 100%;
  width: 100%;
  opacity: 10%;
  position: absolute;
  z-index: -1;
}

#headerText {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 60px;
  margin-left: 10%;
  margin-right: 10%;
  color: #9ba8b1;
}

.text {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 25px;
  text-align: center;
  margin-left: 20%;
  margin-right: 20%;
  color:#9ba8b1;
}

.content {
  padding-top: 110px;
  text-align: center;
}

#homeLink {
  color: #9ba8b1;
  text-decoration: none;
}

